[AUD-922] Fix position of overflow in playlist tile (#648)

--- a/audius-client/packages/web/src/components/track/desktop/TrackListItem.module.css
+++ b/audius-client/packages/web/src/components/track/desktop/TrackListItem.module.css
@@ -152,6 +152,8 @@
 
 .menuContainer {
   display: flex;
+  margin-left: 36px;
+  margin-right: 6px;
 }
 
 .iconKebabHorizontal {
